Fix tab layout bug in singal page

--- a/views/assets/stylesheets/scss/app/_tabs.scss
+++ b/views/assets/stylesheets/scss/app/_tabs.scss
@@ -56,8 +56,8 @@
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
-        background-color: $color-slideout-header;
-        padding: 0;
+        background-color: transparent;
+        padding: 0 0 0 24px;
         overflow-y: hidden;
         overflow-x: scroll;
     }
@@ -116,6 +116,13 @@
         -webkit-flex-grow: 1;
         -ms-flex-positive: 1;
         flex-grow: 1;
+        padding: 0;
+    }
+}
+
+.qor-slideout{
+    .qor-layout__tab .qor-layout__tab-bar{
+        background-color: $color-slideout-header;
         padding: 0;
     }
 }
